WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167627
Crash when trying to compute global location when the WKContentView does not have a window
https://bugs.webkit.org/show_bug.cgi?id=167627
Summary
Crash when trying to compute global location when the WKContentView does not ...
Wenson Hsieh
Reported
2017-01-30 20:50:30 PST
Crash when trying to compute global location when the WKContentView does not have a window
Attachments
Patch
(1.42 KB, patch)
2017-01-30 20:57 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
refactor data interaction state
(3.04 KB, patch)
2017-01-30 21:29 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-01-30 20:57:21 PST
Created
attachment 300183
[details]
Patch
Wenson Hsieh
Comment 2
2017-01-30 21:03:22 PST
<
rdar://problem/30272380
>
Wenson Hsieh
Comment 3
2017-01-30 21:29:48 PST
Created
attachment 300186
[details]
refactor data interaction state
WebKit Commit Bot
Comment 4
2017-01-31 11:50:58 PST
Comment on
attachment 300186
[details]
refactor data interaction state Clearing flags on attachment: 300186 Committed
r211442
: <
http://trac.webkit.org/changeset/211442
>
WebKit Commit Bot
Comment 5
2017-01-31 11:51:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug