Crash when trying to compute global location when the WKContentView does not have a window https://bugs.webkit.org/show_bug.cgi?id=167627 <rdar://problem/30272380>

Reviewed by Beth Dakin.

Moves data interaction state out of OpenSource and into WebKitAdditions. Work towards fixing a crash in
<rdar://problem/30272380>.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView resignFirstResponder]):


Canonical link: https://commits.webkit.org/184681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211442 268f45cc-cd09-0410-ab3c-d52691b4dbfc